// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ColorPickerInput allowRemove 1`] = `
<div>
  <div
    class="color-picker"
  >
    <button
      class="color-picker__button btn btn-default"
      type="button"
    >
      <i
        class="color-picker__chip-small"
        style="background-color: rgb(0, 0, 0);"
      />
      <i
        class="fa fa-caret-down"
      />
    </button>
    <div
      class="color-picker__remove"
    >
      <span
        class="container--action-button"
      >
        <i
          class="fa fa-times container--removal-icon"
        />
      </span>
    </div>
    <div
      class="color-picker__picker"
    />
  </div>
</div>
`;

exports[`ColorPickerInput default props 1`] = `
<div>
  <div
    class="color-picker"
  >
    <button
      class="color-picker__button btn btn-default"
      type="button"
    >
      <i
        class="color-picker__chip-small"
        style="background-color: rgb(0, 0, 0);"
      />
      <i
        class="fa fa-caret-down"
      />
    </button>
    <div
      class="color-picker__picker"
    />
  </div>
</div>
`;

exports[`ColorPickerInput disabled 1`] = `
<div>
  <div
    class="color-picker"
  >
    <button
      class="color-picker__button btn btn-default"
      disabled=""
      type="button"
    >
      <i
        class="color-picker__chip-small"
        style="background-color: rgb(0, 0, 0);"
      />
      <i
        class="fa fa-caret-down"
      />
    </button>
    <div
      class="color-picker__picker"
    />
  </div>
</div>
`;

exports[`ColorPickerInput showPicker 1`] = `
<div>
  <div
    class="color-picker"
  >
    <button
      class="color-picker__button btn btn-default"
      type="button"
    >
      <i
        class="color-picker__chip-small"
        style="background-color: rgb(0, 0, 0);"
      />
      <i
        class="fa fa-caret-up"
      />
    </button>
    <div
      class="color-picker__picker"
    >
      <div
        class="color-picker__mask"
      />
      <div
        style="position: relative; display: inline-block;"
      >
        <div
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16); border-radius: 2px; background: rgb(255, 255, 255);"
        />
        <div
          style="position: relative;"
        >
          <div
            class="compact-picker "
            style="padding-top: 5px; padding-left: 5px; box-sizing: initial; width: 240px;"
          >
            <div>
              <span>
                <div
                  style="background: rgb(255, 255, 255); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px; box-shadow: inset 0 0 0 1px #ddd;"
                  tabindex="0"
                  title="#FFFFFF"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(240, 117, 117); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#F07575"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(244, 174, 113); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#F4AE71"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(240, 224, 117); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#F0E075"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(227, 240, 117); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#E3F075"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(168, 228, 119); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#A8E477"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(127, 240, 195); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#7FF0C3"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(129, 198, 233); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#81C6E9"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(172, 142, 235); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#AC8EEB"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(217, 131, 236); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#D983EC"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(238, 150, 188); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#EE96BC"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(214, 193, 164); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#D6C1A4"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(191, 191, 191); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#BFBFBF"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(234, 69, 69); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#EA4545"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(236, 120, 18); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#EC7812"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(227, 201, 25); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#E3C919"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(188, 207, 23); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#BCCF17"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(107, 192, 38); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#6BC026"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(26, 219, 142); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#1ADB8E"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(38, 155, 214); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#269BD6"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(124, 77, 224); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#7C4DE0"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(185, 33, 219); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#B921DB"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(225, 71, 138); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#E1478A"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(187, 152, 104); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#BB9868"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(128, 128, 128); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#808080"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(209, 23, 23); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#D11717"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(210, 107, 16); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#D26B10"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(220, 177, 24); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#DCB118"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(169, 179, 20); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#A9B314"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(88, 158, 31); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#589E1F"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(22, 187, 121); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#16BB79"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(32, 132, 182); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#2084B6"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(91, 37, 208); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#5B25D0"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(150, 27, 177); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#961BB1"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(184, 30, 97); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#B81E61"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(141, 108, 63); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#8D6C3F"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(64, 64, 64); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#404040"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(161, 18, 18); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#A11212"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(175, 89, 13); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#AF590D"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(170, 136, 19); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#AA8813"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(134, 142, 16); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#868E10"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(74, 132, 26); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#4A841A"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(19, 160, 103); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#13A067"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(27, 110, 152); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#1B6E98"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(72, 29, 165); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#481DA5"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(124, 22, 146); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#7C1692"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(149, 24, 78); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#95184E"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(116, 89, 52); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#745934"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(0, 0, 0); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#000000"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 1;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(124, 14, 14); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#7C0E0E"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(138, 70, 10); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#8A460A"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(138, 110, 15); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#8A6E0F"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(108, 115, 13); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#6C730D"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(57, 102, 20); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#396614"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(16, 132, 86); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#108456"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(23, 94, 130); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#175E82"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(53, 21, 121); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#351579"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(101, 18, 120); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#651278"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(114, 19, 60); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#72133C"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <span>
                <div
                  style="background: rgb(99, 76, 44); height: 15px; width: 15px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 5px; margin-bottom: 5px;"
                  tabindex="0"
                  title="#634C2C"
                >
                  <div
                    style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); border-radius: 50%; opacity: 0;"
                  />
                </div>
              </span>
              <div
                style="clear: both;"
              />
            </div>
            <div
              class="flexbox-fix"
              style="display: flex; padding-bottom: 6px; padding-right: 5px; position: relative;"
            >
              <div
                style="position: absolute; top: 6px; left: 5px; height: 9px; width: 9px; background: rgb(0, 0, 0);"
              />
              <div
                style="position: relative; flex: 6 1 0%;"
              >
                <input
                  id="rc-editable-input-1"
                  spellcheck="false"
                  style="width: 80%; padding: 0px 0px 0px 20%; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
                  value="#000000"
                />
                <label
                  for="rc-editable-input-1"
                  style="display: none;"
                >
                  hex
                </label>
              </div>
              <div
                style="position: relative; flex: 3 1 0%;"
              >
                <input
                  id="rc-editable-input-2"
                  spellcheck="false"
                  style="width: 70%; padding: 0px 0px 0px 30%; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
                  value="0"
                />
                <label
                  for="rc-editable-input-2"
                  style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
                >
                  r
                </label>
              </div>
              <div
                style="position: relative; flex: 3 1 0%;"
              >
                <input
                  id="rc-editable-input-3"
                  spellcheck="false"
                  style="width: 70%; padding: 0px 0px 0px 30%; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
                  value="0"
                />
                <label
                  for="rc-editable-input-3"
                  style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
                >
                  g
                </label>
              </div>
              <div
                style="position: relative; flex: 3 1 0%;"
              >
                <input
                  id="rc-editable-input-4"
                  spellcheck="false"
                  style="width: 70%; padding: 0px 0px 0px 30%; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
                  value="0"
                />
                <label
                  for="rc-editable-input-4"
                  style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
                >
                  b
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPickerInput with button text 1`] = `
<div>
  <div
    class="color-picker"
  >
    <button
      class="color-picker__button btn btn-default"
      type="button"
    >
      Select color...
      <i
        class="fa fa-caret-down"
      />
    </button>
    <i
      class="color-picker__chip"
      style="background-color: rgb(0, 0, 0);"
    />
    <div
      class="color-picker__picker"
    />
  </div>
</div>
`;

exports[`ColorPickerInput without value 1`] = `
<div>
  <div
    class="color-picker"
  >
    <button
      class="color-picker__button btn btn-default"
      type="button"
    >
      None
      <i
        class="fa fa-caret-down"
      />
    </button>
    <div
      class="color-picker__picker"
    />
  </div>
</div>
`;
